apps/market-data/sin/ui-apps/tools-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools-dashboard
spec:
  selector:
    matchLabels:
      app: tools-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: tools-dashboard
    spec:
      containers:
        - name: tools-dashboard
          image: ghcr.io/alphalab-hq/tools-dashboard:20231227_120310Z
          resources:
            requests:
              cpu: "100m"
              memory: 100Mi
            limits:
              cpu: "500m"
              memory: 500Mi
          ports:
            - containerPort: 8080
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui
      imagePullSecrets:
        - name: ghcr-creds
