apps/market-data/sin/ui-apps/tools-dashboard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tools-dashboard
spec:
  selector:
    app: tools-dashboard
  ports:
    - protocol: TCP
      port: 8080
