apps/market-data/sin/ui-apps/tools-dashboard/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tools-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.alphalab.cc`)
      kind: Rule
      services:
        - name: tools-dashboard
          port: 8080
  tls:
    secretName: tools.alphalab.cc-prod-tls
